# interactions-from-fluctuations

./: README.md  pyproject.toml  setup.py
influ/: DMD.py  F2.py  Kalman.py  base.py  infer.py  utils.py
inlfu/: DMD.py  F2.py  base.py
test/: Untitled.ipynb  basic_example.ipynb
